# Chimera_Service

./: .gitignore  .gitmodules  Cargo.toml  README.md  cliff.toml  rustfmt.toml  start.ps1  temp
.github/workflows/: build.yml  publish.yml
chimera_ipc/: Cargo.toml
chimera_ipc/src/: lib.rs
chimera_ipc/src/api/: mod.rs  status.rs
chimera_ipc/src/api/core/: start.rs
chimera_ipc/src/client/: mod.rs  shortcuts.rs
chimera_ipc/src/types/: status.rs
chimera_ipc/src/utils/: mod.rs  os.rs
chimera_service/: Cargo.toml
chimera_service/src/: consts.rs  logging.rs  main.rs  win_service.rs
chimera_service/src/cmds/: install.rs  mod.rs  server.rs  start.rs  status.rs  uninstall.rs
chimera_service/src/cmds/rpc/: mod.rs
chimera_service/src/server/: instance.rs  mod.rs
chimera_service/src/server/routing/: logs.rs  mod.rs  network.rs  status.rs  ws.rs
chimera_service/src/server/routing/core/: mod.rs  restart.rs  start.rs  stop.rs
chimera_service/src/utils/: acl.rs  dirs.rs  mod.rs
chimera_service/src/utils/os/: mod.rs  user.rs
