[workspace]
resolver = "2"
members = ["chimera_service", "chimera_ipc"]

[workspace.package]
edition = "2024"
license = "GPL-3.0"
authors = ["zzzgydi", "LibNyanpasu"]
repository = "https://github.com/MFSGA/Chimera_Service"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

nyanpasu-utils = { git = "https://github.com/LibNyanpasu/nyanpasu-utils.git", default-features = false }

chimera_utils = { git = "https://github.com/MFSGA/Chimera_Utils.git", default-features = false }

thiserror = "2"
anyhow = "1"

clap = { version = "4", features = ["derive"] }

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
