[workspace]
resolver = "2"
members = ["chimera_service", "chimera_ipc"]

[workspace.package]
edition = "2024"
license = "GPL-3.0"
authors = ["zzzgydi", "LibNyanpasu"]
repository = "https://github.com/MFSGA/Chimera_Service"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

nyanpasu-utils = { git = "https://github.com/LibNyanpasu/nyanpasu-utils.git", default-features = false }

chimera_utils = { git = "https://github.com/MFSGA/Chimera_Utils.git", default-features = false }

axum = "0.8"

thiserror = "2"
anyhow = "1"

clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "parking_lot",
] }
tracing-log = { version = "0.2" }
tracing-appender = { version = "0.2", features = ["parking_lot"] }
serde = { version = "1", features = ["derive"] }

futures-util = "0.3"

windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
