[package]
name = "chimera-ipc"
version = "1.5.2"
edition = "2024"

[features]
client = []
server = ["dep:axum", "dep:axum-extra", "dep:tower", "dep:widestring"]

[dependencies]
nyanpasu-utils = { workspace = true, default-features = false, features = [
    "core_manager",
    "serde",
] }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
derive_builder = "0.20"
interprocess = { version = "2.3.1", features = ["tokio"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures-util = "0.3"
pin-project-lite = "0.2"
tokio-util = { version = "0.7", features = ["io-util"] }
bytes = "1"
serde_json = "1"

indexmap = { version = "2", features = ["serde"] }

axum = { version = "0.8", features = ["ws"], optional = true }
axum-extra = { version = "0.12", features = ["typed-header"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
# tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
widestring = { version = "1", optional = true }

tracing-attributes = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
