[package]
name = "chimera-service"
version = "1.5.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
# default-run = "chimera-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing = ["tokio/tracing"] # "dep:console-subscriber"]
deadlock_detection = [
    # "parking_lot/deadlock_detection",
    # "nyanpasu-utils/deadlock_detection",
]

[dependencies]
tokio = { workspace = true, features = ["full"] }
ctrlc = { version = "3", features = ["termination"] }

tracing-panic = "0.1"

nyanpasu-utils = { workspace = true, default-features = false, features = [
    "dirs",
    "os",
    "network",
] }

# todo: add the features
chimera_utils = { workspace = true, default-features = false }

thiserror.workspace = true
anyhow = { workspace = true }

clap = { version = "4", features = ["derive"] }

tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "parking_lot",
] }

supports-color = "3.0.2"
bounded-vec-deque = "0.1.1"
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }
serde_json = "1"
serde = { workspace = true, features = ["derive"] }

constcat = "0.6.0"

[target.'cfg(windows)'.dependencies]
check_elevation = "0.2.4"
windows-service = "0.8"
